[package]
name = "tiktok-api"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "TikTok API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/tiktok-rs"
homepage = "https://github.com/bk-rs/tiktok-rs"
documentation = "https://docs.rs/tiktok-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-enum-str = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
url = { version = "2", default-features = false }

[dev-dependencies]
serde_json = { version = "1" }

